<resources>
    <string name="app_name">MyWords</string>
    <string name="error_loading_words">Error while loading words</string>
    <string name="all_words_deleted">All words were deleted</string>
    <string name="no_words">No words to display</string>
    <string name="word_saved">Word Saved</string>
    <string name="error_empty_word">Word cannot be empty</string>
    <string name="hint_enter_word">Enter word here…</string>
    <string name="label_add_new_word">Add New Word</string>
    <string name="word_deleted">Word was deleted</string>
    <string name="no_data">No Data Available</string>
    <string name="action_delete">Delete</string>
    <string name="label_word_detail">Word Detail</string>
    <string name="action_delete_all">Delete All</string>
</resources>
