...
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:padding="@dimen/sixteen">

                <EditText
                    android:id="@+id/input_word"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_enter_word"
                    android:imeOptions="actionDone"
                    android:text="@={viewmodel.word}"
                    tools:ignore="Autofill,TextFields" />

            </LinearLayout>

        </ScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_save_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sixteen"
            android:onClick="@{() -> viewmodel.saveWord()}"
            android:src="@drawable/ic_save"
            app:backgroundTint="@color/colorAccent"
...
