...
                android:id="@+id/words_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_words"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:dividerOrientation="@{LinearLayout.VERTICAL}"
                    android:scrollbars="vertical"
                    android:visibility="@{viewmodel.empty ? View.GONE : View.VISIBLE}"
                    app:adapter="@{adapter}"
...

            </LinearLayout>

        </test.practice.mywords.util.ScrollChildSwipeRefreshLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add_new_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sixteen"
            android:onClick="@{() -> viewmodel.addNewWord()}"
            android:src="@drawable/ic_add"
            app:backgroundTint="@color/colorAccent"
...
