...
                    android:id="@+id/word_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/display_word"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/sixteen"
                        android:text="@{viewmodel.word.word}"
                        android:visibility="@{viewmodel.dataAvailable ? View.VISIBLE : View.GONE}"
                        tools:text="@tools:sample/lorem/random" />
...
